--- a/smb.conf
+++ b/smb.conf
@@ -1,6 +1,16 @@
 # Global parameters
+[global]
+printing = bsd
+printcap name = /dev/null
+log level = 1
 [share]
 comment = Data
 path = /export
 read only = No
+vfs objects = full_audit
+full_audit:success = connect disconnect mkdir rmdir open close read pread write pwrite sendfile rename unlink chmod fchmod chown fchown chdir ftruncate 
+full_audit:prefix = %u|%I|%m|%S
+full_audit:failure = connect
+full_audit:facility = local5
+full_audit:priority = notice
 
