rm open close audit

--- a/smb.conf
+++ b/smb.conf
@@ -8,7 +8,7 @@ comment = Data
 path = /export
 read only = No
 vfs objects = full_audit
-full_audit:success = connect disconnect mkdir rmdir open close read pread write pwrite sendfile rename unlink chmod fchmod chown fchown chdir ftruncate 
+full_audit:success = connect disconnect mkdir rmdir read pread write pwrite sendfile rename unlink chmod fchmod chown fchown chdir ftruncate 
 full_audit:prefix = %u|%I|%m|%S
 full_audit:failure = connect
 full_audit:facility = local5
