--- a/smb.conf
+++ b/smb.conf
@@ -7,6 +7,7 @@ log level = 1
 comment = Data
 path = /export
 read only = No
+create mask = 0755
 vfs objects = full_audit
 full_audit:success = connect disconnect mkdir rmdir read pread write pwrite sendfile rename unlink chmod fchmod chown fchown chdir ftruncate 
 full_audit:prefix = %u|%I|%m|%S
