--- a/smb.conf
+++ b/smb.conf
@@ -1,8 +1,12 @@
 # Global parameters
 [global]
+workgroup = WORKGROUP
+server string = Samba Server %v
+name resolve order = bcast host
 printing = bsd
 printcap name = /dev/null
 log level = 1
+security = user
 [share]
 comment = Data
 path = /export
